@@ -63,7 +63,8 @@
                     <com.klinker.android.twitter.manipulations.widgets.HoloTextView
                         android:id="@+id/account_one_name"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"/>
 
                 </LinearLayout>
 
@@ -82,7 +83,8 @@
                     <com.klinker.android.twitter.manipulations.widgets.HoloTextView
                         android:id="@+id/account_two_name"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"/>
 
 
                 </LinearLayout>
