@@ -46,6 +46,7 @@ limitations under the License.
         <item name="drawerDividerColor">@color/dark_text_drawer</item>
         <item name="dateColor">@color/dark_date</item>
         <item name="drawerBackground">@android:color/black</item>
+        <item name="oppDrawerBackground">@color/dark_drawer</item>
         <item name="headerTextColor">@android:color/white</item>
         <item name="textShadowColor">@android:color/black</item>
         <item name="windowBackground">@android:color/black</item>
