@@ -45,6 +45,7 @@ limitations under the License.
         <item name="drawerDividerColor">@color/light_text_drawer</item>
         <item name="dateColor">@color/light_date</item>
         <item name="drawerBackground">@color/light_drawer</item>
+        <item name="oppDrawerBackground">@color/dark_drawer</item>
         <item name="headerTextColor">@android:color/white</item>
         <item name="textShadowColor">@android:color/black</item>
         <item name="windowBackground">@color/light_background</item>
