@@ -3,6 +3,8 @@
     &#8226; Memory management enhancements<br/>
     &#8226; Fixed leaky cursors and receivers<br/>
     &#8226; Hopefully fixed the timelines sometimes just not updating<br/>
+    &#8226; Small style change on the tweet viewer<br/>
+    &#8226; Some swipe to dismiss interactions list update<br/>
 </br><br/>
 
 <b>Version 2.0.0 Beta 2:</b><br/><br/>
